--- a/a/howto/eclipse/e4_default_mac.css
+++ b/a/howto/eclipse/e4_default_mac.css
@@ -7,6 +7,8 @@
 
 .MTrimBar{visibility:hidden;height:0px;background:gray}
 
+#SearchField{visibility:hidden;}
+
 .MToolControl.TrimStack{}
 
 .MToolBar.Draggable{}
