--- a/a/qa/t029.cmp
+++ b/a/qa/t029.cmp
@@ -1,6 +1,6 @@
-HTTP/1.1 200
+HTTP/1.1 200 OK
 Content-Length: 1583
-Last-Modified: Mon, 23 Jun 2014 03:25:07 GMT
+Last-Modified: Sat, 28 Jun 2014 01:03:37 GMT
 Connection: Keep-Alive
 
 <!doctype html><meta charset="UTF-8">
