--- a/src/b/x.css
+++ b/src/b/x.css
@@ -1,15 +1,14 @@
-*{padding:0;margin:0;border:0;white-space:pre-wrap;word-wrap:break-word;font-family:inherit;font-size:inherit;background:inherit;color:inherit}
-html{font-family:monospace;height:100%}
-body{height:100%}
+*{padding:0;margin:0;border:0;outline:0;white-space:pre;font-family:inherit;font-size:inherit;background:inherit;color:inherit}
+/*@font-face{font-family:tini;src:url(/ttf/tini.ttf);}*/
+/*@font-face{font-family:tini;src:url(/ttf/monospace-typewriter.ttf);}*/
+/*@font-face{font-family:tini;src:url(/ttf/slkscr.ttf)}*/
+/*@font-face{font-family:tini;src:url(/ttf/adler.ttf)}*/
+/*html{font-family:tini}*/
+html{font-family:monospace}
 table{border-collapse:collapse;empty-cells:show}
 table td{vertical-align:top}
 table th{vertical-align:bottom}
-a,a:visited{text-decoration:none;color:blue}
-ul{list-style:none inside none;}
+ul{list-style:none inside}
 ol{list-style-position:inside}
-a{color:blue;transition:all .4s ease-in-out;-webkit-transition:all .4s ease-in-out;-moz-transition:all .4s ease-in-out;-o-transition:all .4s ease-in-out;}
-a:focus,a:hover,a:active{color:red;text-shadow:0 0 .1em rgba(0,0,0,.5)}
-/*el{display:inline-block}*/
-
-
-
+a,a:visited{text-decoration:none;color:#00a;transition:all .3s ease-in-out}
+a:focus,a:hover,a:active{color:red;text-shadow:0 0 1em rgba(0,0,0,.7)}
