--- a/src/b/x.css
+++ b/src/b/x.css
@@ -1,6 +1,6 @@
 *{padding:0;margin:0;border:0;outline:0;white-space:pre;font-family:inherit;font-size:inherit;background:inherit;color:inherit}
-/*@font-face{font-family:tini;src:url(/ttf/tini.ttf);}*/
-/*@font-face{font-family:tini;src:url(/ttf/monospace-typewriter.ttf);}*/
+/*@font-face{font-family:tini;src:url(/ttf/tini.ttf)}*/
+/*@font-face{font-family:tini;src:url(/ttf/monospace-typewriter.ttf)}*/
 /*@font-face{font-family:tini;src:url(/ttf/slkscr.ttf)}*/
 /*@font-face{font-family:tini;src:url(/ttf/adler.ttf)}*/
 /*html{font-family:tini}*/
