--- a/a/src/b/x.css
+++ b/a/src/b/x.css
@@ -1,4 +1,4 @@
-*{padding:0;margin:0;border:0;outline:0;white-space:pre;font-family:inherit;font-size:inherit;background:inherit;color:inherit}
+*{font-size:1em;padding:0;margin:0;border:0;outline:0;white-space:pre;font-family:inherit;font-size:inherit;background:inherit;color:inherit}
 html{font-family:monospace}
 table{border-collapse:collapse;empty-cells:show}
 table td{vertical-align:top}
